--- a/src/pages/Menu/Itens/Item/Item.module.scss
+++ b/src/pages/Menu/Itens/Item/Item.module.scss
@@ -1,15 +1,17 @@
 @import "styles/variables";
 @import "styles/breakpoints";
-
-$pasta: #d73b3b;
-$meat: #30201e;
-$meal: #e6c864;
-$vegan: #80aa40;
-
 .item {
+  align-items: center;
+  border-radius: 10px;
+  cursor: pointer;
   display: flex;
   flex-wrap: wrap;
+  padding: 20px;
+  transition: .2s ease-in;
   width: 90%;
+  &:hover {
+    background-color: $grey;
+  }
   &__image {
     min-width: 240px;
     @media (max-width: $desktop_xsm) {
@@ -26,7 +28,7 @@ $vegan: #80aa40;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
-    padding: 0 20px;
+    margin: 0 20px;
     @media (max-width: $desktop_xsm) {
       flex-direction: row;
       margin-top: 20px;
@@ -46,57 +48,5 @@ $vegan: #80aa40;
       max-width: 600px;
       margin-bottom: 20px;
     }
-  }
-  &__tags {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    max-width: 700px;
-    @media (max-width: $desktop_xsm) {
-      justify-content: flex-end;
-    }
-    @media (max-width: $mobile) {
-      justify-content: flex-start;
-    }
-    > div {
-      margin: 10px;
-    }
-  }
-  &__type {
-    align-items: center;
-    border-radius: 2px;
-    display: flex;
-    font-weight: bold;
-    height: 40px;
-    justify-content: center;
-    padding: 10px 30px;
-    &__pasta {
-      background-color: $pasta;
-      color: white;
-    }
-    &__meat {
-      background-color: $meat;
-      color: white;
-    }
-    &__meal {
-      background-color: $meal;
-    }
-    &__vegan {
-      background-color: $vegan;
-    }
-  }
-  &__portion,
-  &__qtpeople,
-  &__price {
-    align-items: center;
-    display: flex;
-    font-size: 1.25rem;
-    font-weight: bold;
-    justify-content: center;
-  }
-  &__price {
-    color: $red;
-    font-size: 1.7rem;
   }
 }
