--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -1,37 +1,63 @@
 @import "styles/variables";
 @import "styles/breakpoints";
 
-.nav {
+.logoMobile {
+  display: none;
+
+  @media(min-width: 100px) and (max-width: 600px) {
     display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+}
 
-    padding: 20px $padding-horizontal;
-    @media (max-width: $desktop_xsm) {
-      padding: 20px $padding-horizontal-mobile;
-    }
-    @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
-      padding: 20px $padding-horizontal-sm;
-    }
-    @media (min-width: $desktop_sm) and (max-width: $desktop_md) {
-      padding: 20px $padding-horizontal-md;
-    }
+.logoDesktop {
+  display: none;
+  @media(min-width: 601px) {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+}
 
-    &__list {
-      align-items: center;
-      display: flex;
-    }
-    &__link {
-      list-style-type: none;
-      padding: 0 20px;
-      a {
-        color: $dark;
-        cursor: pointer;
-        font-size: 24px;
-        font-weight: 600;
-        text-decoration: none;
-        transition: .2s ease;
-        &:hover {
-          color: $dark-grey;
-        }
+.nav {
+  display: flex;
+
+  padding: 20px $padding-horizontal;
+
+  @media (max-width: $desktop_xsm) {
+    padding: 20px $padding-horizontal-mobile;
+  }
+
+  @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
+    padding: 20px $padding-horizontal-sm;
+  }
+
+  @media (min-width: $desktop_sm) and (max-width: $desktop_md) {
+    padding: 20px $padding-horizontal-md;
+  }
+
+  &__list {
+    align-items: center;
+    display: flex;
+  }
+
+  &__link {
+    list-style-type: none;
+    padding: 0 20px;
+
+    a {
+      color: $dark;
+      cursor: pointer;
+      font-size: 24px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: .2s ease;
+
+      &:hover {
+        color: $dark-grey;
       }
     }
   }
+}
