--- a/src/components/StandardPage/StandardPage.module.scss
+++ b/src/components/StandardPage/StandardPage.module.scss
@@ -8,6 +8,7 @@
     background-repeat: no-repeat;
     display: flex;
     height: 300px;
+    width: auto;
     padding: 0px $padding-horizontal;
     @media (max-width: $desktop_xsm) {
       padding: 0px $padding-horizontal-mobile;
