--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Italiana&family=Josefin+Sans:wght@400;700&display=swap');
 
-
+html,body{
+  overflow-x: hidden;
+}
 
 body {
   background-color: #f6f6f6;
+
 }
 
 *{
