Fixed responsibility of NotFound component

--- a/src/pages/NotFound/NotFound.module.scss
+++ b/src/pages/NotFound/NotFound.module.scss
@@ -7,6 +7,10 @@
   flex-direction: column;
   justify-content: center;
 }
+.notFound {
+  width: 60%;
+  height: auto;
+}
 .back {
   display: flex;
   justify-content: flex-start;
